--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <img class="logo" src="./assets/Netflix_Logo_RGB-removebg-preview.png" alt="Netflix Logo" />
         <div class="right-nav">
           <select id="language" name="language">
-            <option class="lang-opt" value="en">English</option>
+            <option class="lang-opt" value="#">Select Language <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+              <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+            </svg></option>
+            <option class="lang-opt" value="en">English </option>
             <option class="lang-opt" value="hi">हिन्दी (Hindi)</option>
           </select>
           <a href="#" class="signup-button">Sign Up</a>
@@ -31,8 +34,9 @@
       <input type="email" class="email-input" placeholder="Enter your email" />
 
       <button class="get-started-btn">
-        Get Started
-        <span class="arrow">></span>
+        Get Started <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+          <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
+        </svg>
       </button>
     </section>
 
